2004-08-22  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h (PSEUDO) [IS_IN_librt]:
	Save gp around CENABLE/CDISABLE calls.

2004-08-15  Roland McGrath  <roland@frob.com>

	* pthread_atfork.c: Update copyright terms including special exception
	for these trivial files, which are statically linked into executables
	that use dynamic linking for the significant library code.

2004-08-09  Jakub Jelinek  <jakub@redhat.com>

	* libc-tsd.c: Move resolv.h include before the #if.
	(__res_maybe_init): New function.  Add libc_hidden_def.

2004-08-02  Ulrich Drepper  <drepper@redhat.com>

	* linuxthreads.texi (Cleanup Handlers): Fix typo.
	Reported by Bjoern Engelmann <bjengelmann@gmx.de>.

2004-07-23  Jakub Jelinek  <jakub@redhat.com>

	[BZ #284]
	* sysdeps/pthread/pthread.h (pthread_getcpuclockid): Use __clockid_t
	instead of clockid_t.

2004-07-21  Roland McGrath  <roland@redhat.com>

	* Makefile ($(objpfx)multidir.mk): Use $(make-target-directory).

2004-07-02  Roland McGrath  <roland@redhat.com>

	* configure: Don't exit.

2004-07-20  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/pt-machine.h: Use standard names for ABI macros,
	include sgidefs.h.
	* sysdeps/mips/atomicity.h: Likewise.

2004-07-19  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/mips/Makefile (CFLAGS-pt-initfini.s):
	Remove redundant override that missed -g0.

2004-07-14  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/sysdep-cancel.h
	(__local_multiple_threads): Define for librt.
	(SINGLE_THREAD_P): Likewise.

2004-07-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/getcpuclockid.c (pthread_getcpuclockid): Allow
	using other thread's clock.
	* ptclock_gettime.c (__pthread_clock_gettime): Likewise.
	* ptclock_settime.c (__pthread_clock_settime): Likewise.
	* internals.h (__pthread_clock_gettime, __pthread_clock_settime):
	Remove prototypes.
	Reported by Bernd Schmidt <bernds@redhat.com>.