@@ -1,3 +1,9 @@
+2004-08-25  Richard Sandiford  <rsandifo@redhat.com>
+
+	* sysdeps/unix/sysv/linux/mips/sysdep-cancel.h (CENABLE, CDISABLE,
+	__local_multiple_threads): Fix definitions for IS_IN_librt.
+	* sysdeps/unix/sysv/linux/mips/mips64/sysdep-cancel.h: Likewise.
+
 2004-08-22  Andreas Schwab  <schwab@suse.de>
 
 	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h (PSEUDO) [IS_IN_librt]:
